Added api sevices and removed redundent api from apispec
